# quant-sim

./: .env.example  .gitignore  DASHBOARD_COMPLETE.md  HOW_TO_RUN.md  LICENSE  PROJECT_SUMMARY.md  README.md  WHATS_NEXT.md  quick_test.py  requirements.txt  tick_database.db
.qwen/: settings.json
docs/: ARCHITECTURE.md  BUILD_YOUR_OWN_HFT_SYSTEM.md  DASHBOARD_AND_BACKTESTING_GUIDE.md  PRE_MARKET_CHECKLIST.txt  PROJECT_DOCUMENTATION.md  QUICK_START.md
hft-analytics/: performance_analytics.py
hft-dashboard/: DASHBOARD_GUIDE.md  README.md  VISUAL_GUIDE.md  dashboard_server.py  package.json  requirements.txt  start_dashboard.bat  trading_data.db
hft-matching-engine/: Cargo.toml
hft-matching-engine/src/: errors.rs  latency.rs  lib.rs  main.rs  market_data.rs  network.rs  types.rs
hft-matching-engine/src/order_book/: mod.rs
hft-matching-engine/tests/: multi_lot_tests.rs
hft-ml/: AUTONOMOUS_INTEGRATION.md  AUTO_TRADER_GUIDE.md  COMPLETE_SETUP.md  LIVE_DATA_QUICKREF.md  LIVE_MARKET_CONNECTION.md  MARKET_COMMAND_SETUP.md  NUMBER_INPUT_FIXED.md  README.md  START_HERE.md  SUMMARY_LIVE_TRADING.md  SYSTEM_READY.md  TERMINAL_GUIDE.md  advanced_features.py  auto_trader.py  backtest_RELIANCE_20260410_113941.json  backtest_RELIANCE_20260410_115959.json  backtest_RELIANCE_20260410_140218.json  backtest_fast.py  backtest_model.py  connect_live_market.py  data_loader.py  data_pipeline.py  ensemble_model.py  evaluation.py  fetch_real_nse_data.py  generate_all_data.py  generate_realistic_data.py  live_config.json  live_data_feed.py  live_trading.py  market.bat  orchestrator.py  (+26 more)
(+92 files in other folders)
