[package]
name = "hft-matching-engine"
version = "0.1.0"
edition = "2021"
authors = ["HFT Platform Team"]
description = "Institutional-grade high-frequency trading matching engine"

[lib]
name = "hft_matching_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 bindings
pyo3 = { version = "0.21", features = ["extension-module"] }

# High-performance data structures
crossbeam = "0.8"
parking_lot = "0.12"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
instant = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Zero-copy messaging (optional, for network integration)
# zeromq = { version = "0.4", features = ["tokio-runtime", "tcp-transport"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Math and statistics
statrs = "0.16"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
